add backup and restore scripts

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,5 +27,6 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      NODE_ENV: ${NODE_ENV}
     volumes:
       - .:/usr/src/app
