--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "importData": "node init/import_data.js",
-    "backup": "./init/back_up/back_up.sh",
-    "restore": "./init/back_up/restore.sh"
+    "importData": "npm install && node src/app.js",
+    "backup": "./setup_database/back_up/back_up.sh",
+    "restore": "./setup_database/back_up/restore.sh"
   },
   "author": "Sifiso Sithole",
   "license": "ISC",
@@ -15,7 +15,11 @@
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
